# Baxter-Cli

./: .env.example  .gitignore  AGENT.MD  README.md  RELEASE.md  creator_note.txt  pip.txt  pyproject.toml  python.py
baxter/: __init__.py  baxter_cli.py  providers.py  terminal_ui.py
baxter/tools/: apply_diff.py  delete_path.py  list_dir.py  read_file.py  registry.py  run_cmd.py  safe_path.py  search_code.py
new_folder/: index.html
tools/: __init__.py  git_cmd.py  make_dir.py  read_file.py  registry.py  run_cmd.py  safe_path.py  write_file.py
