[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumagent"
version = "0.1.2"
description = "Lumagent CLI - a terminal coding agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Lumagent" },
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]
dependencies = [
  "python-dotenv>=1.0.0",
]

[project.scripts]
lumagent = "baxter.baxter_cli:main"

[tool.setuptools.packages.find]
include = ["baxter*"]
